--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@babel/preset-env": "^7.4.4",
     "@babel/runtime": "^7.4.4",
     "autoprefixer": "^9.5.1",
+    "browserify": "^16.2.3",
     "gulp": "^4.0.1",
     "gulp-babel": "^8.0.0",
+    "gulp-base64": "^0.1.3",
+    "gulp-browserify": "^0.5.1",
     "gulp-clean-css": "^4.2.0",
     "gulp-connect": "^5.7.0",
     "gulp-if": "^2.0.2",
@@ -31,5 +34,8 @@
     "http-proxy-middleware": "^0.19.1",
     "imagemin-pngquant": "^7.0.0",
     "typescript": "^3.4.5"
+  },
+  "dependencies": {
+    "core-js": "3"
   }
 }
