--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "npx gulp",
     "dev": "set NODE_ENV=dev&&npx gulp dev",
-    "build": "set NODE_ENV=prod&&npx gulp build "
+    "build": "set NODE_ENV=prod&&npx gulp build",
+    "clean": "npx gulp clean"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -17,6 +18,7 @@
     "@babel/runtime": "^7.4.4",
     "autoprefixer": "^9.5.1",
     "browserify": "^16.2.3",
+    "del": "^4.1.1",
     "gulp": "^4.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-base64": "^0.1.3",
@@ -31,6 +33,7 @@
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
     "gulp-uglify": "^3.0.2",
+    "gulp-zip": "^4.2.0",
     "http-proxy-middleware": "^0.19.1",
     "imagemin-pngquant": "^7.0.0",
     "typescript": "^3.4.5"
