--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npx gulp",
     "dev": "set NODE_ENV=dev&&npx gulp dev",
     "build": "set NODE_ENV=prod&&npx gulp build",
-    "clean": "npx gulp clean"
+    "clean": "npx gulp clean",
+    "zip":"set NODE_ENV=prod&&npx gulp zip"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
