--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "set NODE_ENV=dev&&npx gulp dev",
     "build": "set NODE_ENV=prod&&npx gulp build",
     "clean": "npx gulp clean",
-    "zip":"set NODE_ENV=prod&&npx gulp build zip"
+    "zip": "set NODE_ENV=prod&&npx gulp build zip"
   },
   "devDependencies": {
     "@babel/cli": "^7.4.4",
@@ -20,17 +20,23 @@
     "autoprefixer": "^9.5.1",
     "browserify": "^16.2.3",
     "del": "^4.1.1",
+    "eslint": "^6.8.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-html": "^6.0.0",
     "gulp": "^4.0.1",
     "gulp-babel": "^8.0.0",
     "gulp-base64": "^0.1.3",
     "gulp-browserify": "^0.5.1",
     "gulp-clean-css": "^4.2.0",
     "gulp-connect": "^5.7.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^5.0.3",
     "gulp-less": "^4.0.1",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
+    "gulp-rev-collector": "^1.3.1",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-typescript": "^5.0.1",
     "gulp-uglify": "^3.0.2",
